@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.840 2013/12/26 17:58:28 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.841 2013/12/28 21:27:32 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -250,8 +250,9 @@ C
  * The optional bandwidth for the kernel density smoothing option is taken from
  a keyword rather than a data column.  See `smooth kdensity`.
 
- * If external library libcerf is available, provide complex math routines
- cerf, cdawson, erfi, faddeeva, and the Voigt profile VP(x,sigma,gamma).
+ * If the external library libcerf is available, it is used to provide complex
+ math routines cerf, cdawson, erfi, faddeeva, and the Voigt profile
+ VP(x,sigma,gamma).
 
 2 Deprecated syntax
 ?deprecated syntax
@@ -261,17 +262,23 @@ C
  provided a configuration option that allowed backward compatability.
  Support for the old syntax has now been removed.
 
- Deprecated:
+ Deprecated in version 4 and removed in version 5:
        set title "Old" 0,-1
        set data linespoints
        plot 1 2 4               # horizontal line at y=1
-       if (defined(VARNAME)) ...
- New:
+ Current equivalent:
        TITLE = "New"
        set title TITLE offset char 0, char -1
        set style data linespoints
        plot 1 linetype 2 pointtype 4
+ Deprecated but in version 5 if configured --enable-backwards-compatibility
+       if (defined(VARNAME)) ...
+       set style increment user
+       plot 'file' thru f(x)
+ Current equivalent:
        if (exists("VARNAME")) ...
+       set linetype
+       plot 'file' using 1:(f(column(2)))
 
 2 Batch/Interactive Operation
 ?batch/interactive
@@ -9217,8 +9224,8 @@ Ffigure_missing
  line (the previous default meaning of lt 1).  This includes uses such as the
  definition of a temporary linestyle derived from the base linetype 1.
 
- `Note`: This command was introduced in gnuplot version 4.6.  It supersedes a
- rather cryptic command "set style increment user".
+ `Note`: This command was introduced in gnuplot version 4.6.  It supersedes an
+ older rather cryptic command "set style increment user".
  The older command is now deprecated.
 
  This mechanism can be used to define a set of personal preferences for the
@@ -13558,18 +13565,18 @@ Ffigure_missing
 =nohidden3d
 =floating point exceptions
  Floating point exceptions (floating point number too large/small, divide by
- zero, etc.) may occasionally be generated by user defined functions.  Some of
- the demos in particular may cause numbers to exceed the floating point range.
+ zero, etc.) may be generated by user defined functions.  Some of the demos in
+ particular may cause numbers to exceed the floating point range.
  Whether the system ignores such exceptions (in which case `gnuplot` labels
  the corresponding point as undefined) or aborts `gnuplot` depends on the
  compiler/runtime environment.
 
- The gamma, bessel, and erf functions do not work for complex arguments.
+ The gamma and bessel functions do not support complex arguments.
 
  Coordinates specified as "time" wrap at 24 hours.
 
  Parametric curves: The 'nohidden3d' option to exempt individual plots from the
- global property 'set hidden3d' does not work for parametric curves.
+ global setting 'set hidden3d' does not work for parametric curves.
  Iteration inside a `plot` command does not work for parametric curves.
 
  X11 terminal: It is difficult to select UTF-8 fonts.
@@ -13577,8 +13584,8 @@ Ffigure_missing
  This means that multiplots whose constituent plots use different
  palettes will not display correctly in x11.
 
- Qt terminal: If the local qt environment does not support "opengl" as a
- rendering mode then display of polygons and surfaces can be very slow.
+ Qt terminal: 3D rotation of polygons and surfaces can be very slow;
+ this is strongly affected by the Qt rendering mode (see Qt documentation).
 
 2 External libraries
 ?bugs external_libraries
